--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "element-ui": "^2.4.5",
     "reset-css": "^5.0.2",
     "vue": "^2.6.14",
-    "vue-router": "3.0.7",
+    "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
